--- a/.env
+++ b/.env
@@ -15,7 +15,21 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=bfc9f42919789fa9a5f77ee14b52e2a7
+APP_SECRET=secret
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=qwerty1234
+###< lexik/jwt-authentication-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DATABASE_URL=postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=9&charset=utf8
+###< doctrine/doctrine-bundle ###
