--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,6 @@
+# enable Bearer authorization
+SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
+
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "http://localhost:3000"
 </IfModule>
