--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/security-bundle": "5.1.*",
         "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*"
+        "symfony/yaml": "5.1.*",
+        "ext-json": "*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.23"
