--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,7 +3,7 @@ SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 
 <IfModule mod_headers.c>
     Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Cache-Control, Host"
+    Header always set Access-Control-Allow-Headers "Origin, X-Requested-With, Content-Type, Accept, Cache-Control, Host, Authorization"
     Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
 </IfModule>
 
