--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": ">=7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "^1.11",
         "doctrine/annotations": "^1.11",
         "doctrine/doctrine-bundle": "^2.2",
@@ -17,9 +18,9 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/security-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
         "symfony/validator": "5.1.*",
-        "symfony/yaml": "5.1.*",
-        "ext-json": "*"
+        "symfony/yaml": "5.1.*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.23"
